adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate perferendis, iusto deserunt consequuntur repellat obcaecati rerum ullam, voluptatum quaerat, commodi excepturi distinctio dignissimos cum. Quaerat qui quibusdam cupiditate suscipit consequuntur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint velit distinctio reiciendis eos dignissimos veniam, dolorum nobis ducimus quibusdam enim debitis consectetur nisi eaque temporibus aspernatur deserunt consequatur labore dolor!</p>
 </body>
 </html>
